--- a/Public/index.html
+++ b/Public/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Téléchargeur de Vidéos</title>
+    <title>Video Downloader</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Téléchargez vos vidéos</h1>
+        <h1>Download Your Videos</h1>
         <form id="download-form">
-            <input type="text" id="video-url" placeholder="Entrez l'URL de la vidéo">
-            <button type="submit">Télécharger</button>
+            <input type="text" id="video-url" placeholder="Enter the video URL">
+            <button type="submit">Download</button>
         </form>
         <p id="status"></p>
     </div>
